--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^16.3.0
   firebase_auth: ^6.1.1
   flutter_secure_storage: ^9.2.4
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
