--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^6.1.1
   flutter_secure_storage: ^9.2.4
   flutter_bloc: ^9.1.1
+  get_it: ^8.2.0
 
 dev_dependencies:
   flutter_test:
